Bug 927407 - Optimizing NS_{Input, Output}StreamIsBuffered to avoid unnecessary main thread I/O in trivial cases